feat: sale contoller, sql  update(#12)
* fix: updated create DTO

* feat: add response DTO

* fix: update base entity

* fix: uniformize responses and use DTO

* fix: make use DTO in SaleService

* test: update test for SaleService

* chore: update init.sql and format

* fix: adjusted entity for correct bookCopy field

* fix: adjusted dtos

* fix: change controllers endpoint and set response Content-Type header

* fix: adjusted service for sale entity changes

* chore: update init.sql

* chore: foramt

* fix: missing price field in sale

* fix: error 500 when getting all books

* fix: add midding type field when creating book copy

* fix: book update immutable list

* fix(init): add CASCADE

* docs: add basic Postman json test file

* chore: format